# lumberman

./: .cookiecutter.json  .copier-answers.yml  .coverage.lcov  .coverage.xml  .cruft.json  .gitignore  .graphite_repo_config  .ruff.toml  CHANGELOG.md  CLAUDE.md  DOCS.md  Dockerfile  Makefile  README.md  pyproject.toml  pyrefly.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json  post_create.sh
.github/: Dockerfile.dev
.github/workflows/: docker_release.yml  test.yml  tests.yml
herbarium/: __main__.py  git.py  git_utils.py  issue_parser.py  issue_presenter.py  issue_service.py  issue_stringifyer.py  issue_title_parser.py  parse_issue_title.py  queue.py  queue_manipulator.py  queue_navigator.py  queuer.py  registry.py  stacker.py  subprocess_utils.py  test_example.py  test_issue_service.py  test_issue_stringifyer.py  test_parse_issue_title.py
herbarium.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
herbarium/cli/: config.py  interface_elements.py  location.py  manipulation.py  navigation.py
herbarium/issues/: test_issue_service.py  test_model.py  test_stringifyer.py
herbarium/queue/: manipulator.py  navigator.py
herbarium/stack/: navigator.py
lumberman/: __main__.py  git.py  test_generate_docs.py
lumberman/cli/: config.py  interface_elements.py  location.py  manipulation.py  markdown.py  navigation.py  subprocess_utils.py
lumberman/issues/: controller.py  issue_stringifyer.py  model.py  provider.py  selecter.py  stringifyer.py  test_model.py  test_stringifyer.py  test_title_parser.py  title_parser.py  view.py
lumberman/stack/: manipulator.py  navigator.py
src/lumberman/: __init__.py  __main__.py  git.py
src/lumberman/change_manager/: manager.py
src/lumberman/cli/: config.py  interface_elements.py  location.py  manipulation.py  subprocess_utils.py
src/lumberman/issues/: controller.py  github.py  linear.py  provider.py  selecter.py  stringifyer.py  test_issue_service.py  test_linear.py  test_model.py  test_stringifyer.py  test_title_parser.py  title_parser.py
src/lumberman/stack/: manipulator.py  navigator.py
