[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "herbarium"
version = "0.13.1"
authors = [
  { name = "Martin Bernstorff", email = "martinbernstorff@gmail.com" },
]
description = "Herbarium"
classifiers = ["Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12"]
requires-python = ">=3.9"
dependencies = ["typer", "questionary"]

[project.optional-dependencies]
dev = [
  "cruft==2.15.0",
  "pyright==1.1.333",
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "pytest-xdist==3.5.0",
  "pytest-sugar==0.9.7",
  "diff-cover==8.0.1",
  "ruff==0.1.2",
]

[project.license]
file = "LICENSE"

[project.scripts]
herbarium = "herbarium.__main__:app"
herb = "herbarium.__main__:app"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/MartinBernstorff/herbarium"
repository = "https://github.com/MartinBernstorff/herbarium"
documentation = "https://MartinBernstorff.github.io/herbarium/"

[tool.pyright]
exclude = [".*venv*"]
pythonPlatform = "Darwin"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "C4",
  "COM",
  "D417",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "NPY001",
  "PD002",
  "PIE",
  "PLE",
  "PLW",
  "PT",
  "UP",
  "PTH",
  "RSE",
  "RET",
  "RUF",
  "SIM",
  "W",
]
ignore = [
  "ANN101",
  "ANN401",
  "E402",
  "E501",
  "F401",
  "F841",
  "RET504",
  "COM812",
  "COM819",
  "W191",
]
ignore-init-module-imports = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
unfixable = ["ERA"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "__init__.py",
  "docs/conf.py",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.setuptools]
include-package-data = true

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build; python -m build"