[project]
version = "0.53.0"
requires-python = ">=3.10"
name = "lumberman"
description = "lumberman"
dependencies = ["typer==0.21.1", "rich==14.3.2", "iterfzf>=1.1.0.44.0"]
authors = [{ name = "Martin Bernstorff", email = "martinbernstorff@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.license]
file = "LICENSE"

[project.scripts]
lumberman = "lumberman.__main__:app"
lm = "lumberman.__main__:app"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/MartinBernstorff/lumberman"
repository = "https://github.com/MartinBernstorff/lumberman"
documentation = "https://MartinBernstorff.github.io/lumberman/"

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "diff-cover>=10.2.0",
  "pyrefly>=0.52.0",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-sugar>=1.1.1",
  "pytest-testmon>=2.2.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build; python -m build"
